--- a/FrontEnd/home.css
+++ b/FrontEnd/home.css
@@ -21,12 +21,12 @@
     margin: auto;
     width: 300px;
     padding-bottom: 5px;
-    display: block;
 }
 #LogBox3
 {
-    margin: auto;
-    width: 300px;
-    padding-bottom: 5px;
+    display: block;
+}
+#LogBox4
+{
     display: none;
 }
