--- a/FrontEnd/home.css
+++ b/FrontEnd/home.css
@@ -6,6 +6,9 @@
 {
     margin: auto;
     text-align: center;
+    background-color: rgb(0, 30, 197);
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 #LogBox1
 {
